package org.spf4j.stackmonitor.proto.gen;

message SampleNode {
  required int32 count = 2;
  repeated SamplePair subNodes = 3;
}

message Method {
  required string declaringClass = 1;
  required string methodName = 2;
}

message SamplePair {
  required Method method = 1;
  required SampleNode node = 2;
}
